# tg-bot-schedule

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  sock.cpp  sock.h  tg_bot_schedule
src/: main.cpp
